<resources>
    <string name="app_name">UrsKart</string>
    <string name="su_digiventures_ltd">su digiventures</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="create_new_account">Create New Account</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="mobile">Mobile</string>
    <string name="create_account">Create Account</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="wishlist">Wishlist</string>
    <string name="yourbag">Your Bag</string>
    <string name="search_product">search Product</string>
    <string name="urskart">UrsKart.com</string>
    <string name="shop_now">shop now</string>
    <string name="your_utility_ready_store">Your utility ready store</string>
    <string name="cod">COD</string>
    <string name="urskart_services">UrsKart Services</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="review_rating"><![CDATA[Review & Rating]]></string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="submit_your_order">Submit your order</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
</resources>
