<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#e8e8e8"
    android:id="@+id/ll_top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_marginBottom="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <include layout="@layout/item_progress_bar"/>

        <EditText
            android:id="@+id/etName"
            style="@style/mEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="First Name"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/etLastName"
            style="@style/mEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Last Name"
            android:inputType="textPersonName"
            android:textSize="14sp" />

            <EditText
                style="@style/mEditText"
                android:background="@color/white"
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:maxLength="10"
                android:inputType="phone"
                android:textSize="14sp" />


        <EditText
            android:id="@+id/etEmail"
            style="@style/mEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Email Id"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />



        <EditText
            android:id="@+id/etPassword"
            style="@style/mEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/etConfirmPassword"
            style="@style/mEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:textSize="14sp" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register"
            style="@style/myBotton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/create_account"
          />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/or"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="Already Having Account? Log IN"
            android:textColor="#00a2e8"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible" />


    </LinearLayout>


</ScrollView>