<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:background="#e8e8e8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_marginBottom="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp"
            />


        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/etEmail"
            style="@style/mEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username/Mobile Number"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/etPassword"
            style="@style/mEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp" />



            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:text="Forgot password"
                android:layout_gravity="right"
                android:textColor="#ed1c4c"
                android:textSize="14sp" />

        <android.support.v7.widget.AppCompatButton
            android:layout_marginTop="10dp"
            android:id="@+id/login"
            style="@style/myBotton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="Login"
           />
<!--

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="By Signing in, I agree to "
                android:textColor="@color/white" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/termsConditions"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="Terms &amp; Conditons"
                android:textColor="@color/colorAccent" />
        </LinearLayout>-->

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/or"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:text="@string/create_new_account"
            android:textStyle="bold"
            android:textColor="#00a2e8"
            android:textSize="16sp"
            android:visibility="visible" />


    </LinearLayout>


</LinearLayout>